https://bugs.webkit.org/show_bug.cgi?id=68054 Return an image scale factor as well as an Image* from CachedImage::brokenImage()

Reviewed by Darin Adler.

CachedImage::brokenImage() now returns a pair<Image*, float> where the float
represents the image's scale factor. This is important because currently, the
broken image will either be only 1x or 2x, but a deviceScaleFactor could
theoretically be something different (1.5, 3, etc). So it is not safe to assume
that the image's scale factor is equivalent to the deviceScaleFactor, and
hardcoding 2 for now is lame.
* loader/cache/CachedImage.cpp:
(WebCore::CachedImage::brokenImage):
(WebCore::CachedImage::image):
* loader/cache/CachedImage.h:
* rendering/RenderImage.cpp:
(WebCore::RenderImage::imageSizeForError):
(WebCore::RenderImage::paintReplaced):



Canonical link: https://commits.webkit.org/83986@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@95103 268f45cc-cd09-0410-ab3c-d52691b4dbfc